@@ -22,13 +22,13 @@ Net::SSLeay::OCSP class in L<SPVM> represents L<OCSP|https://docs.openssl.org/ma
 
 C<static method response_status_str : string ($code : long);>
 
-Calls native L<OCSP_response_status_str|https://man.openbsd.org/OCSP_basic_sign.3> function given the pointer value of the instance, $code, and returns its return value.
+Calls native L<OCSP_response_status_str|https://man.openbsd.org/OCSP_basic_sign.3> function given $code, and returns its return value.
 
 =head2 response_status
 
 C<static method response_status : int ($resp : L<Net::SSLeay::OCSP_RESPONSE|SPVM::Net::SSLeay::OCSP_RESPONSE>);>
 
-Calls native L<OCSP_response_status|https://docs.openssl.org/1.1.1/man3/OCSP_response_status> function given the pointer value of the instance, $resp, and returns its return value.
+Calls native L<OCSP_response_status|https://docs.openssl.org/1.1.1/man3/OCSP_response_status> function given $resp, and returns its return value.
 
 Exceptions:
 
@@ -52,7 +52,7 @@ If OCSP_basic_verify failed, an exception is thrown with C<eval_error_id> set to
 
 C<static basic_add1_cert : int ($resp : L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP>, $cert : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509>);>
 
-Calls native L<OCSP_basic_add1_cert|https://github.com/openssl/openssl/blob/master/crypto/ocsp/ocsp_srv.c> function given the pointer value of the instance, $resp, $cert, puses $cert to the end of L<certs_list|SPVM::Net::SSLeay::OCSP_BASICRESP/"certs_list"> field of $resp, and returns its return value.
+Calls native L<OCSP_basic_add1_cert|https://github.com/openssl/openssl/blob/master/crypto/ocsp/ocsp_srv.c> function given $resp, $cert, puses $cert to the end of L<certs_list|SPVM::Net::SSLeay::OCSP_BASICRESP/"certs_list"> field of $resp, and returns its return value.
 
 Exceptions:
 
@@ -66,7 +66,7 @@ If OCSP_basic_add1_cert failed, an exception is thrown with C<eval_error_id> set
 
 C<static method check_nonce : int ($req : L<Net::SSLeay::OCSP_REQUEST|SPVM::Net::SSLeay::OCSP_REQUEST>, $resp : L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP>);>
 
-Calls native L<OCSP_check_nonce|https://docs.openssl.org/1.1.1/man3/OCSP_request_add1_nonce> function given the pointer value of the instance, $req, $resp, and returns its return value.
+Calls native L<OCSP_check_nonce|https://docs.openssl.org/1.1.1/man3/OCSP_request_add1_nonce> function given $req, $resp, and returns its return value.
 
 Exceptions:
 
@@ -78,7 +78,7 @@ The OCSP_BASICRESP $resp must be defined. Otherwise an exception is thrown.
 
 C<static method check_validity : int ($thisupd : L<Net::SSLeay::ASN1_GENERALIZEDTIME|SPVM::Net::SSLeay::ASN1_GENERALIZEDTIME>, $nextupd : L<Net::SSLeay::ASN1_GENERALIZEDTIME|SPVM::Net::SSLeay::ASN1_GENERALIZEDTIME>, $sec : long, $maxsec : long);>
 
-Calls native L<OCSP_check_nonce|https://docs.openssl.org/1.1.1/man3/OCSP_request_add1_nonce> function given the pointer value of the instance, $req, $resp, and returns its return value.
+Calls native L<OCSP_check_nonce|https://docs.openssl.org/1.1.1/man3/OCSP_request_add1_nonce> function given $req, $resp, and returns its return value.
 
 Exceptions:
 
@@ -92,7 +92,7 @@ If OCSP_check_validity failed, an exception is thrown with C<eval_error_id> set 
 
 C<static method resp_count : int ($bs : L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP>);>
 
-Calls native L<OCSP_resp_count|https://docs.openssl.org/master/man3/OCSP_resp_find_status> function given the pointer value of the instance, $bs, and returns its return value.
+Calls native L<OCSP_resp_count|https://docs.openssl.org/master/man3/OCSP_resp_find_status> function given $bs, and returns its return value.
 
 Exceptions:
 
@@ -102,7 +102,7 @@ The OCSP_BASICRESP object $bs must be defined. Otherwise an exception is thrown.
 
 C<static method single_get0_status : int ($single : L<Net::SSLeay::OCSP_SINGLERESP|SPVM::Net::SSLeay::OCSP_SINGLERESP>, $reason_ref : int*, $revtime_ref : L<Net::SSLeay::ASN1_GENERALIZEDTIME|SPVM::Net::SSLeay::ASN1_GENERALIZEDTIME>[], $thisupd_ref : L<Net::SSLeay::ASN1_GENERALIZEDTIME|SPVM::Net::SSLeay::ASN1_GENERALIZEDTIME>[], $nextupd_ref : L<Net::SSLeay::ASN1_GENERALIZEDTIME|Net::SSLeay::ASN1_GENERALIZEDTIME>[]);>
 
-Calls native L<OCSP_single_get0_status|https://docs.openssl.org/master/man3/OCSP_resp_find_status> function given the pointer value of the instance, $single, $reason_ref, $revtime_ref, $thisupd_ref, $nextupd_ref, and returns its return value.
+Calls native L<OCSP_single_get0_status|https://docs.openssl.org/master/man3/OCSP_resp_find_status> function given $single, $reason_ref, $revtime_ref, $thisupd_ref, $nextupd_ref, and returns its return value.
 
 The first element of $reason_ref, the first element of $revtime_ref, the first element of $thisupd_ref are copied using native L<ASN1_STRING_dup|https://docs.openssl.org/1.1.1/man3/ASN1_STRING_length> function.
 
@@ -140,7 +140,7 @@ If OCSP_single_get0_status failed, an exception is thrown with C<eval_error_id> 
 
 C<static method resp_find : int ($bs : L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP>, $id : L<Net::SSLeay::OCSP_CERTID|SPVM::Net::SSLeay::OCSP_CERTID>, $last : int);>
 
-Calls native L<OCSP_resp_find|https://docs.openssl.org/master/man3/OCSP_resp_find_status> function given the pointer value of the instance, $bs, $id, $last, and returns its return value.
+Calls native L<OCSP_resp_find|https://docs.openssl.org/master/man3/OCSP_resp_find_status> function given $bs, $id, $last, and returns its return value.
 
 Exceptions:
 
@@ -154,7 +154,7 @@ If OCSP_resp_find failed, an exception is thrown with C<eval_error_id> set to th
 
 C<static method resp_get0 : L<Net::SSLeay::OCSP_SINGLERESP|SPVM::Net::SSLeay::OCSP_SINGLERESP> ($bs : L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP>, $idx : int);>
 
-Calls native L<OCSP_resp_get0|https://docs.openssl.org/1.1.1/man3/OCSP_resp_find_status> function given the pointer value of the instance, $bs, $idx, creates a new L<Net::SSLeay::OCSP_SINGLERESP|SPVM::Net::SSLeay::OCSP_SINGLERESP> object, sets C<no_free> flag of the new object to 1, sets L<Net::SSLeay::OCSP_SINGLERESP#ref_ocsp_basicresp|SPVM::Net::SSLeay::OCSP_SINGLERESP/"ref_ocsp_basicresp"> field to the new object, and returns the new object.
+Calls native L<OCSP_resp_get0|https://docs.openssl.org/1.1.1/man3/OCSP_resp_find_status> function given $bs, $idx, creates a new L<Net::SSLeay::OCSP_SINGLERESP|SPVM::Net::SSLeay::OCSP_SINGLERESP> object, sets C<no_free> flag of the new object to 1, sets L<Net::SSLeay::OCSP_SINGLERESP#ref_ocsp_basicresp|SPVM::Net::SSLeay::OCSP_SINGLERESP/"ref_ocsp_basicresp"> field to the new object, and returns the new object.
 
 Exceptions:
 
@@ -166,7 +166,7 @@ If OCSP_resp_get0 failed, an exception is thrown with C<eval_error_id> set to th
 
 C<static method response_get1_basic : L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP> ($resp : L<Net::SSLeay::OCSP_RESPONSE|SPVM::Net::SSLeay::OCSP_RESPONSE>);>
 
-Calls native L<OCSP_response_get1_basic|https://docs.openssl.org/master/man3/OCSP_response_status> function given the pointer value of the instance, $resp, creates a new L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP> object, sets C<no_free> flag of the new object to 1, sets L<Net::SSLeay::OCSP_BASICRESPP#ref_ocsp_response|SPVM::Net::SSLeay::OCSP_BASICRESP/"ref_ocsp_response"> field to the new object, and returns the new object.
+Calls native L<OCSP_response_get1_basic|https://docs.openssl.org/master/man3/OCSP_response_status> function given $resp, creates a new L<Net::SSLeay::OCSP_BASICRESP|SPVM::Net::SSLeay::OCSP_BASICRESP> object, sets C<no_free> flag of the new object to 1, sets L<Net::SSLeay::OCSP_BASICRESPP#ref_ocsp_response|SPVM::Net::SSLeay::OCSP_BASICRESP/"ref_ocsp_response"> field to the new object, and returns the new object.
 
 Exceptions:
 
@@ -175,6 +175,12 @@ The OCSP_RESPONSE object $resp must be defined. Otherwise an exception is thrown
 OCSP_response_status($resp) must be OCSP_RESPONSE_STATUS_SUCCESSFUL. Otherwise an exception is thrown.
 
 If OCSP_response_get1_basic failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
+
+=head2 cert_to_id
+
+C<static method cert_to_id : L<Net::SSLeay::OCSP_CERTID|SPVM::Net::SSLeay::OCSP_CERTID> ($dgst : L<Net::SSLeay::EVP_MD|SPVM::Net::SSLeay::EVP_MD>, $subject : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509>, $issuer : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509>);>
+
+Calls native L<OCSP_cert_to_id|https://docs.openssl.org/1.1.1/man3/OCSP_cert_to_id> function given $resp, creates a new L<Net::SSLeay::OCSP_CERTID|SPVM::Net::SSLeay::OCSP_CERTID> object, sets the pointer value of the new object to the return value of the native function, and returns the new object.
 
 =head1 Copyright & License
 
