@@ -11,6 +11,7 @@ class Net::SSLeay::OCSP {
   use Net::SSLeay::X509_STORE;
   use Net::SSLeay::X509;
   use Net::SSLeay::ASN1_GENERALIZEDTIME;
+  use Net::SSLeay::EVP_MD;
   
   native static method response_status_str : string ($code : long);
   
@@ -33,5 +34,7 @@ class Net::SSLeay::OCSP {
   native static method resp_get0 : Net::SSLeay::OCSP_SINGLERESP ($bs : Net::SSLeay::OCSP_BASICRESP, $idx : int);
   
   native static method response_get1_basic : Net::SSLeay::OCSP_BASICRESP ($resp : Net::SSLeay::OCSP_RESPONSE);
+  
+  native static method cert_to_id : Net::SSLeay::OCSP_CERTID ($dgst : Net::SSLeay::EVP_MD, $subject : Net::SSLeay::X509, $issuer : Net::SSLeay::X509);
   
 }
